Fixed layout on smaller devices

--- a/styles/default.css
+++ b/styles/default.css
@@ -181,7 +181,7 @@ body {
 
 @media (max-width: 400px) {
     .cellphone {
-        background: none;
+        display: none;
     }
     body {
         background-image: url(../images/icon-128.png);
@@ -191,10 +191,17 @@ body {
         background-position: bottom right;
     }
     .content {
-        margin-top: 0;
+        margin: 0;
+        width: 100%;
     }
     #logo-nasc {
         right: auto;
         left: 5px;
+    }
+    .vib-signals {
+        display: none;
+    }
+    .result-container {
+        padding-left: 5px;
     }
 }
